--- a/index.html
+++ b/index.html
@@ -27,6 +27,19 @@
         </div>
     </header>
     <main>
+        <section class="action-section">
+            <div class="wrapper action-wrapper">
+                <div class="action-content">
+                    <h2 class="h2-action">See It in Action</h2>
+                    <p class="p-action">Explore the live preview and imagine your brand in this bold new look.</p>
+                    <a class="btn-cls action-margin" href="#">Launch Live Preview</a>
+                </div>
+                <div class="action-image">
+                    <img src="./Assets/wc-mini.png" alt="Live Preview" />
+                </div>
+            </div>
+        </section>
+
 
     </main>
     <footer>
