--- a/index.html
+++ b/index.html
@@ -40,6 +40,25 @@
             </div>
         </section>
 
+        <section class="stats-section">
+            <div class="wrapper stats-box">
+                <h2 class="stats-heading">Joined Thousands of Productive Users</h2>
+                <div class="stats-grid">
+                    <div class="stat-item">
+                        <h3>50K</h3>
+                        <p>Active Users</p>
+                    </div>
+                    <div class="stat-item">
+                        <h3>2M+</h3>
+                        <p>Focus Sessions</p>
+                    </div>
+                    <div class="stat-item">
+                        <h3>95%</h3>
+                        <p>Satisfaction Rate</p>
+                    </div>
+                </div>
+            </div>
+        </section>
 
     </main>
     <footer>
