--- a/index.html
+++ b/index.html
@@ -59,9 +59,29 @@
                 </div>
             </div>
         </section>
+        <section class="contact-section">
+            <div class="wrapper contact-wrapper">
+                <div class="contact-heading">
+                    <h2>Let’s Get in<br>Touch</h2>
+                </div>
+                <form class="contact-form" action="#" method="post">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" placeholder="example@email.com" required />
+
+                    <label for="name">Name</label>
+                    <input type="text" id="name" name="name" placeholder="full name" required />
+
+                    <label for="message">Message</label>
+                    <textarea id="message" name="message" rows="4" placeholder="write your message..."
+                        required></textarea>
+
+                    <button type="submit" class="btn-cls">Get in Touch</button>
+                </form>
+            </div>
+        </section>
 
     </main>
-    <footer>
+    <footer class="footer-section">
 
     </footer>
 </body>
