--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
                 </div>
             </div>
         </section>
+        <section>
+            
+        </section>
         <section class="contact-section">
             <div class="wrapper contact-wrapper">
                 <div class="contact-heading">
@@ -82,7 +85,19 @@
 
     </main>
     <footer class="footer-section">
-
+        <div class="wrapper footer-wrapper">
+            <h2 class="footer-logo">LOGO</h2>
+            <p class="footer-subtitle">
+                Ready to elevate your online presence? Contact us today to discuss your project and discover how we can
+                bring your vision to life.
+            </p>
+            <ul class="footer-links">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">How it Works</a></li>
+                <li><a href="#">Services</a></li>
+            </ul>
+        </div>
     </footer>
 </body>
 
