--- a/index.html
+++ b/index.html
@@ -59,9 +59,52 @@
                 </div>
             </div>
         </section>
-        <section>
-            
+        <section class="testimonials-section">
+            <div class="wrapper">
+                <h2 class="testimonials-heading">What our users say</h2>
+                <div class="testimonial-grid">
+                    <div class="testimonial-card">
+                        <div class="stars">★★★★★</div>
+                        <h3>Loved by Designers</h3>
+                        <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+                        <div class="reviewer">
+                            <img src="./Assets/avatar.png" alt="Reviewer">
+                            <div>
+                                <span>Reviewer name</span><br>
+                                <small>Date</small>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="testimonial-card">
+                        <div class="stars">★★★★★</div>
+                        <h3>Loved by Designers</h3>
+                        <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+                        <div class="reviewer">
+                            <img src="./Assets/avatar.png" alt="Reviewer">
+                            <div>
+                                <span>Reviewer name</span><br>
+                                <small>Date</small>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="testimonial-card">
+                        <div class="stars">★★★★★</div>
+                        <h3>Loved by Designers</h3>
+                        <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+                        <div class="reviewer">
+                            <img src="./Assets/avatar.png" alt="Reviewer">
+                            <div>
+                                <span>Reviewer name</span><br>
+                                <small>Date</small>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
         </section>
+
         <section class="contact-section">
             <div class="wrapper contact-wrapper">
                 <div class="contact-heading">
